--- a/package.json
+++ b/package.json
@@ -22,12 +22,19 @@
   "dependencies": {
     "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.4",
+    "@nestjs/sequelize": "^10.0.1",
+    "@nestjs/websockets": "^10.4.4",
     "axios": "^1.7.7",
     "moment": "^2.30.1",
+    "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
